# sunnypilot

./: .codespellignore  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lfsconfig  .lfsconfig-prebuilts  .pre-commit-config.yaml  1.sh  404.html  AGENTS.md  CHANGELOG.md  CHANGELOGS.md  Dockerfile.sunnypilot  Dockerfile.sunnypilot_agnos  Dockerfile.sunnypilot_base  Dockerfile.sunnypilot_c3x  FEATURES.md  HOW-TOS.md  Jenkinsfile  LICENSE.md  README.md  RELEASES.md  RELEASES_SUBARU.md  SConstruct  SECURITY.md  SunnyPilot_Acronym_Dictionary  SunnyPilot_Acronym_Dictionary.md  can_listener.py  compile_commands.json  conftest.py  force_car_recognition.py  force_car_set.sh  geo-file  git_reset.sh  git_src_commit  git_src_commit_date  gitcommit.sh  gitpull.sh  (+24 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  (+3 more)
panda/: Dockerfile  Dockerfile.panda  __init__.py  pyproject.toml
panda/board/: health.h  main.c  main_comms.h  safety.h  safety_declarations.h  safety_sunnypilot_common.h  usb_comms.h
panda/board/boards/: black.h  uno.h
panda/board/drivers/: can_common.h  registers.h  uart_declarations.h  usb.h
panda/board/safety/: safety_chrysler.h  safety_ford.h  safety_gm.h  safety_honda.h  safety_hyundai.h  safety_hyundai_canfd.h  safety_hyundai_common.h  safety_hyundai_community.h  safety_mazda.h  safety_nissan.h  safety_subaru.h  safety_subaru.h.bak  safety_subaru_legacy.h  safety_subaru_preglobal.h  safety_toyota.h  safety_volkswagen.h  safety_volkswagen_mqb.h  safety_volkswagen_pq.h
panda/board/sunnypilot/: safety_mads.h
panda/examples/: query_fw_versions.py
panda/python/: __init__.py  constants.py  uds.py
panda/tests/libpanda/: panda.os  safety_helpers.h  safety_helpers.py
panda/tests/misra/: suppressions.txt
panda/tests/safety/: common.py  mads_common.py  test_subaru.py  test_subaru_legacy.py
panda/tests/safety_replay/: helpers.py  test_safety_replay.py
(+3060 files in other folders)
